# project-wobble

./: .gitignore  CMakeLists.txt  README.md  env.ps1  nrf52_pca10040.overlay  prj.conf  prj.conf.bak  prj.conf.old  prj_nrf52840_pca10056.conf  prj_nrf52_pca10040.conf
app/: CMakeLists.txt
app/src/: bt.c  bt.h  hog_parser.c  hog_parser.h  imu.c  imu.h  main.c  messages.c  messages.h  temperature.c  temperature.h  ui.c  ui.h
app/src/embgui/linked_list/src/: linked_list.c  linked_list.h
app/src/embgui/linked_list/test/: main.c
docs/: BT Scan Design.md  DRV8825 Control Design.md  UI.md
drivers/character_lcd/: Kconfig  Kconfig.lcd1602  lcd1602.c  lcd1602.h
drivers/drv8825/: config_drv8825.h  drv8825.c  drv8825.h
drivers/oled/: Kconfig.ssd1306  config_display_ssd1306.h  display_ssd1306.c  display_ssd1306.h
drivers/sensor/mpu9250/: mpu6050_trigger.c  mpu9250.c  mpu9250.h  mpu9250_config.h
scripts/: Setup-Project.ps1
